Fix for note title not being visible in minimized state.

--- a/styles/calendaria.css
+++ b/styles/calendaria.css
@@ -812,6 +812,12 @@
   }
 }
 
+.calendar-note-sheet.minimized {
+  .window-title {
+    visibility: visible;
+  }
+}
+
 .calendar-note-form {
   display: flex;
   flex-direction: column;
